# BAR

./: .gitignore  CLAUDE.md  README-zh_CN.md  README.md  pyproject.toml  requirements.txt  sample_imagenet.py  test.py
configs/generator/: bar_b.yaml  bar_b_patch2.yaml  bar_b_patch38.yaml  bar_b_patch4.yaml  bar_b_patch4_caption.yaml  bar_b_patch77.yaml  bar_l.yaml  bar_l_res512.yaml  bar_l_res512_caption.yaml
configs/tokenizer/: bar_fsq_10bits_res512.yaml  bar_fsq_16bits.yaml
data/: __init__.py  webdataset_reader.py
evaluator/: __init__.py  evaluator.py  inception.py
modeling/: generator.py  mbm_head.py  mbm_head_ddim.py  quantizer.py  tokenizer.py
modeling/modules/: __init__.py  base_model.py  blocks.py  discriminator_dino.py  ema_model.py  losses.py  lpips.py  perceptual_loss.py  rope.py
scripts/: bench_diffusion_steps.py  bench_diffusion_steps.sh  ddim_sweep.py  ddim_sweep.sh  list_checkpoints.py  list_metrics.py  list_runs.py  pretokenization.py  sample_imagenet.py  sample_imagenet.sh  train_bar.py  train_bar.sh  train_bar_caption.sh  train_bar_fsq.py  train_bar_smoke.sh
utils/: eval_utils.py  logger.py  lr_schedulers.py  misc.py  train_utils.py  viz_utils.py
