[project]
name = "bar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.13.0"
dependencies = [
    "accelerate>=1.12.0",
    "bitsandbytes>=0.49.1",
    "einops>=0.8.2",
    "gdown>=5.2.1",
    "huggingface-hub>=1.4.1",
    "iopath>=0.1.10",
    "numpy>=2.4.2",
    "omegaconf>=2.3.0",
    "open-clip-torch>=3.2.0",
    "pillow>=12.1.1",
    "scipy>=1.17.0",
    "termcolor>=3.3.0",
    "timm>=1.0.24",
    "torch-fidelity>=0.3.0",
    "torchinfo>=1.8.0",
    "tqdm>=4.67.3",
    "transformers>=5.1.0",
    "wandb>=0.25.0",
    "webdataset>=1.0.2",
    "xformers>=0.0.32.post2",
]

[project.optional-dependencies]
cu128 = [
    "torch~=2.10.0",
    "torchvision",
    "flash-attn",
]
cu130 = [
    "torch~=2.10.0",
    "torchvision",
    "flash-attn",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", extra = "cu128" },
    { index = "pytorch-cu130", extra = "cu130" },
]
torchvision = [
    { index = "pytorch-cu128", extra = "cu128" },
    { index = "pytorch-cu130", extra = "cu130" },
]
flash-attn = [
    { url = "https://github.com/mjun0812/flash-attention-prebuild-wheels/releases/download/v0.7.16/flash_attn-2.8.3%2Bcu128torch2.10-cp313-cp313-linux_x86_64.whl", extra = "cu128" },
    { url = "https://github.com/mjun0812/flash-attention-prebuild-wheels/releases/download/v0.7.16/flash_attn-2.8.3%2Bcu130torch2.10-cp313-cp313-linux_x86_64.whl", extra = "cu130" },
]

[tool.uv]
conflicts = [
    [{ extra = "cu128" }, { extra = "cu130" }],
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
